--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FocusFlow | Master Your Productivity</title>
+    <title>FocusFlow | Elevate Your Deep Work</title>
     <meta name="description"
-        content="FocusFlow helps you regain control of your time with AI-powered focus sessions and task management.">
+        content="FocusFlow is the ultimate OS for your productivity. Experience deep work with AI-powered focus sessions.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- Background Decoration -->
+    <div class="glow-point" style="top: 0; left: 20%; color: var(--primary);"></div>
+    <div class="glow-point" style="top: 40%; right: 10%; color: var(--secondary);"></div>
+
     <header class="navbar">
         <div class="container">
             <div class="logo">
-                <span class="logo-icon">⚡</span>
+                <div class="logo-box">
+                    <span class="logo-icon">▲</span>
+                </div>
                 <span class="logo-text">FocusFlow</span>
             </div>
             <nav class="nav-links">
@@ -27,7 +32,7 @@
             </nav>
             <div class="nav-cta">
                 <a href="#" class="btn btn-outline">Log In</a>
-                <a href="#" class="btn btn-primary">Start Free Trial</a>
+                <a href="#" class="btn btn-primary">Try Free</a>
             </div>
             <button class="mobile-menu-toggle" id="menuToggle">
                 <span></span>
@@ -42,40 +47,32 @@
         <section class="hero" id="home">
             <div class="container">
                 <div class="hero-content">
-                    <div class="badge">Version 2.0 is live!</div>
+                    <div class="badge">Next Generation Productivity</div>
                     <h1>Master Your Time. <span>Find Your Flow.</span></h1>
-                    <p>Stop juggling tasks and start finishing them. FocusFlow uses neuro-science backed techniques to
+                    <p>Stop juggling tasks and start finishing them. FocusFlow uses neuro-science to
                         help you reach deep work states faster and stay there longer.</p>
                     <div class="hero-actions">
-                        <a href="#" class="btn btn-primary btn-lg">Get Started Free</a>
-                        <a href="#" class="btn btn-secondary btn-lg">Watch Demo</a>
-                    </div>
-                    <div class="hero-trust">
-                        <p>Trusted by 50,000+ professionals at</p>
-                        <div class="trust-logos">
-                            <!-- Logos will be text/icons for now -->
-                            <span>Adobe</span>
-                            <span>Slack</span>
-                            <span>Spotify</span>
-                            <span>Linear</span>
-                        </div>
+                        <a href="#" class="btn btn-primary btn-lg">Start Free Trial </a>
+                        <a href="#" class="btn btn-secondary btn-lg">View Demo</a>
                     </div>
                 </div>
                 <div class="hero-visual">
                     <div class="visual-container">
-                        <img src="hero-mockup.png" alt="FocusFlow App Interface" id="heroImage">
+                        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&q=80&w=2070"
+                            alt="FocusFlow Dashboard" id="heroImage">
+                        <!-- Decorative floating cards -->
                         <div class="floating-card card-1">
-                            <div class="icon">📈</div>
+                            <div class="icon">⚡</div>
                             <div>
-                                <h4>+45%</h4>
-                                <p>Deep Work Increase</p>
+                                <h4>+68%</h4>
+                                <p>Output Increase</p>
                             </div>
                         </div>
                         <div class="floating-card card-2">
-                            <div class="icon">🧘</div>
+                            <div class="icon">🛡️</div>
                             <div>
-                                <h4>Pro Mode</h4>
-                                <p>Active Focus</p>
+                                <h4>Shield</h4>
+                                <p>Distraction Free</p>
                             </div>
                         </div>
                     </div>
@@ -87,29 +84,30 @@
         <section class="features" id="features">
             <div class="container">
                 <div class="section-header">
-                    <h2>Everything you need to <span>stay focused.</span></h2>
-                    <p>Built for creators, engineers, and anyone who values their time.</p>
+                    <h2>The OS for <span>high performers.</span></h2>
+                    <p>Precision tools engineered for focus, flow, and results.</p>
                 </div>
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-icon">🧠</div>
-                        <h3>Smart Focus Sessions</h3>
-                        <p>Our AI analyzes your energy levels and suggests the perfect time for deep work.</p>
+                        <h3>AI Flow State</h3>
+                        <p>Predictive energy analysis that optimizes your schedule for maximum deep work potential.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">📵</div>
-                        <h3>Distraction Shield</h3>
-                        <p>Automatically block distracting sites and notifications when you enter flow mode.</p>
+                        <h3>Deep Shield</h3>
+                        <p>Intelligent notification management that kills distractions before they reach your screen.
+                        </p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">📊</div>
-                        <h3>Progress Analytics</h3>
-                        <p>Detailed insights into your productivity patterns and focus improvements.</p>
+                        <h3>Neurolink Analytics</h3>
+                        <p>High-fidelity data visualization of your cognitive output and focus endurance patterns.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">☁️</div>
-                        <h3>Seamless Sync</h3>
-                        <p>Your tasks and focus sessions synced across all your devices instantly.</p>
+                        <h3>Instant Node</h3>
+                        <p>Real-time cross-platform state persistence. Pick up exactly where you left off, anywhere.</p>
                     </div>
                 </div>
             </div>
@@ -119,54 +117,51 @@
         <section class="pricing" id="pricing">
             <div class="container">
                 <div class="section-header">
-                    <h2>Simple, <span>transparent pricing.</span></h2>
-                    <p>Choose the plan that fits your productivity goals.</p>
+                    <h2>Investment in <span>yourself.</span></h2>
+                    <p>Upgrade your cognitive throughput with our precision plans.</p>
                 </div>
                 <div class="pricing-grid">
                     <div class="pricing-card">
-                        <div class="card-palyload">
-                            <h3>Free</h3>
-                            <div class="price">$0<span>/mo</span></div>
-                            <p>Perfect for individuals starting their focus journey.</p>
+                        <div class="card-payload">
+                            <h3>Starter</h3>
+                            <div class="price">$0<span>/lifetime</span></div>
+                            <p>Essential tools for focus beginners.</p>
                             <ul class="features-list">
-                                <li>Basic Focus Timer</li>
-                                <li>Up to 5 Projects</li>
-                                <li>Daily Reports</li>
-                                <li>Community Support</li>
+                                <li>Basic Flow Timer</li>
+                                <li>Cloud Persistence</li>
+                                <li>Daily Analytics</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-outline full-width">Get Started</a>
+                        <a href="#" class="btn btn-outline full-width">Begin Journey</a>
                     </div>
                     <div class="pricing-card featured">
-                        <div class="card-badge">Most Popular</div>
-                        <div class="card-palyload">
-                            <h3>Pro</h3>
-                            <div class="price">$12<span>/mo</span></div>
-                            <p>For power users who want to maximize every minute.</p>
+                        <div class="card-badge">Top Tier</div>
+                        <div class="card-payload">
+                            <h3>Pro Elite</h3>
+                            <div class="price">$15<span>/mo</span></div>
+                            <p>Maximum power for high-stakes work.</p>
                             <ul class="features-list">
-                                <li>All Free Features</li>
-                                <li>Unlimited Projects</li>
-                                <li>AI Focus Suggestion</li>
-                                <li>Distraction Shield</li>
+                                <li>AI Flow Prediction</li>
                                 <li>Advanced Analytics</li>
+                                <li>Priority Support</li>
+                                <li>Custom Integrations</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-primary full-width">Start Free Trial</a>
+                        <a href="#" class="btn btn-primary full-width">Unlock Elite</a>
                     </div>
                     <div class="pricing-card">
-                        <div class="card-palyload">
-                            <h3>Team</h3>
-                            <div class="price">$49<span>/mo</span></div>
-                            <p>Collaborative focus tools for growing high-performance teams.</p>
+                        <div class="card-payload">
+                            <h3>Quantum</h3>
+                            <div class="price">$59<span>/mo</span></div>
+                            <p>Collaborative focus for high-speed teams.</p>
                             <ul class="features-list">
-                                <li>All Pro Features</li>
+                                <li>Everything in Pro</li>
                                 <li>Team Analytics</li>
-                                <li>Shared Focus Rooms</li>
-                                <li>Priority Support</li>
-                                <li>SSO Integration</li>
+                                <li>Shared Focus Nodes</li>
+                                <li>SSO & Security</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-outline full-width">Get Started</a>
+                        <a href="#" class="btn btn-outline full-width">Go Quantum</a>
                     </div>
                 </div>
             </div>
@@ -176,43 +171,40 @@
         <section class="testimonials" id="testimonials">
             <div class="container">
                 <div class="section-header">
-                    <h2>Don't just take our <span>word for it.</span></h2>
-                    <p>Join thousands of high-performers who have transformed their work habits.</p>
+                    <h2>Tested by <span>masters.</span></h2>
+                    <p>The elite choice for silicon valley engineers and global creators.</p>
                 </div>
                 <div class="testimonials-grid">
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
-                        <p class="quote">"FocusFlow has completely changed how I approach my deep work sessions. I'm
-                            finishing tasks in half the time it used to take."</p>
+                        <p class="quote">"FocusFlow isn't just an app; it's a cognitive upgrade. I've doubled my output
+                            while working fewer hours."</p>
                         <div class="user-info">
                             <img src="https://i.pravatar.cc/150?u=1" alt="Sarah Chen" class="avatar">
                             <div>
                                 <h4>Sarah Chen</h4>
-                                <p>Senior Software Engineer @ Google</p>
+                                <p>Staff Engineer @ Vercel</p>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
-                        <p class="quote">"The distraction shield is a lifesaver. It's the only thing that actually keeps
-                            me off social media when I need to deliver."</p>
+                        <p class="quote">"The distraction shield is surgical. It's the only thing that keeps me in the
+                            zone when I'm shipping."</p>
                         <div class="user-info">
                             <img src="https://i.pravatar.cc/150?u=2" alt="Marcus Thompson" class="avatar">
                             <div>
                                 <h4>Marcus Thompson</h4>
-                                <p>Product Designer @ Airbnb</p>
+                                <p>Lead Designer @ Linear</p>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
-                        <p class="quote">"Analytics helped me realize I'm most productive at 10 AM. Now I schedule all
-                            my deep work then and my output has skyrocketed."</p>
+                        <p class="quote">"Analytics revealed patterns I never saw. Now I'm working with my brain, not
+                            against it."</p>
                         <div class="user-info">
                             <img src="https://i.pravatar.cc/150?u=3" alt="Elena Rodriguez" class="avatar">
                             <div>
                                 <h4>Elena Rodriguez</h4>
-                                <p>Marketing Director @ Spotify</p>
+                                <p>Founding Engineer @ OpenAI</p>
                             </div>
                         </div>
                     </div>
@@ -224,11 +216,11 @@
         <section class="cta-section">
             <div class="container">
                 <div class="cta-card">
-                    <h2>Ready to reach your full potential?</h2>
-                    <p>Join 50,000+ others who are taking control of their focus today.</p>
+                    <h2>Ready to ascend?</h2>
+                    <p>Join 50,000+ high-performers today.</p>
                     <div class="cta-actions">
-                        <a href="#" class="btn btn-primary btn-lg">Get Started for Free</a>
-                        <p class="no-credit-card">No credit card required.</p>
+                        <a href="#" class="btn btn-primary btn-lg">Join the Elite</a>
+                        <p class="no-credit-card">Immediate access. No commitment.</p>
                     </div>
                 </div>
             </div>
@@ -240,38 +232,40 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <div class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <div class="logo-box">
+                            <span class="logo-icon">▲</span>
+                        </div>
                         <span class="logo-text">FocusFlow</span>
                     </div>
-                    <p>The OS for your productivity.</p>
+                    <p>The operating system for your mind.</p>
                 </div>
                 <div class="footer-links">
                     <div class="link-group">
-                        <h4>Product</h4>
-                        <a href="#">Features</a>
-                        <a href="#">Pricing</a>
-                        <a href="#">API</a>
+                        <h4>Core</h4>
+                        <a href="#">System</a>
+                        <a href="#">Modules</a>
+                        <a href="#">Network</a>
                     </div>
                     <div class="link-group">
-                        <h4>Company</h4>
-                        <a href="#">About</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Careers</a>
+                        <h4>Entity</h4>
+                        <a href="#">Protocol</a>
+                        <a href="#">Status</a>
+                        <a href="#">Intel</a>
                     </div>
                     <div class="link-group">
                         <h4>Support</h4>
-                        <a href="#">Help Center</a>
-                        <a href="#">Contact</a>
-                        <a href="#">Privacy</a>
+                        <a href="#">Base</a>
+                        <a href="#">Terminal</a>
+                        <a href="#">Encrypted</a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 FocusFlow Inc. All rights reserved.</p>
+                <p>&copy; 2026 FocusFlow System. Secure encryption active.</p>
                 <div class="social-links">
-                    <a href="#">Twitter</a>
-                    <a href="#">LinkedIn</a>
+                    <a href="#">X</a>
                     <a href="#">GitHub</a>
+                    <a href="#">Discord</a>
                 </div>
             </div>
         </div>
