Color scheme Changes, Layout Changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -19,12 +22,7 @@
 
     <header class="navbar">
         <div class="container">
-            <div class="logo">
-                <div class="logo-box">
-                    <span class="logo-icon">▲</span>
-                </div>
-                <span class="logo-text">FocusFlow</span>
-            </div>
+            <div class="logo-text" style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em;">FocusFlow</div>
             <nav class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
@@ -58,8 +56,8 @@
                 </div>
                 <div class="hero-visual">
                     <div class="visual-container">
-                        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&q=80&w=2070"
-                            alt="FocusFlow Dashboard" id="heroImage">
+                        <img src="https://images.unsplash.com/photo-1497032628192-86f99bcd76bc?auto=format&fit=crop&q=80&w=2070"
+                            alt="Productivity Workspace" id="heroImage">
                         <!-- Decorative floating cards -->
                         <div class="floating-card card-1">
                             <div class="icon">⚡</div>
@@ -216,11 +214,17 @@
         <section class="cta-section">
             <div class="container">
                 <div class="cta-card">
-                    <h2>Ready to ascend?</h2>
-                    <p>Join 50,000+ high-performers today.</p>
-                    <div class="cta-actions">
-                        <a href="#" class="btn btn-primary btn-lg">Join the Elite</a>
-                        <p class="no-credit-card">Immediate access. No commitment.</p>
+                    <div class="cta-content">
+                        <h2>Ready to ascend?</h2>
+                        <p>Join 50,000+ high-performers today.</p>
+                        <div class="cta-actions">
+                            <a href="#" class="btn btn-primary btn-lg">Join the Elite</a>
+                            <p class="no-credit-card">Immediate access. No commitment.</p>
+                        </div>
+                    </div>
+                    <div class="cta-visual">
+                        <img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?auto=format&fit=crop&q=80&w=2070"
+                            alt="Productive Workspace">
                     </div>
                 </div>
             </div>
@@ -231,12 +235,9 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <div class="logo">
-                        <div class="logo-box">
-                            <span class="logo-icon">▲</span>
-                        </div>
-                        <span class="logo-text">FocusFlow</span>
-                    </div>
+                    <div class="logo-text"
+                        style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em; margin-bottom: 1rem; display: block;">
+                        FocusFlow</div>
                     <p>The operating system for your mind.</p>
                 </div>
                 <div class="footer-links">
