--- a/index.html
+++ b/index.html
@@ -20,25 +20,7 @@
     <div class="glow-point" style="top: 0; left: 20%; color: var(--primary);"></div>
     <div class="glow-point" style="top: 40%; right: 10%; color: var(--secondary);"></div>
 
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-text" style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em;">FocusFlow</div>
-            <nav class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#testimonials">Testimonials</a>
-            </nav>
-            <div class="nav-cta">
-                <a href="#" class="btn btn-outline">Log In</a>
-                <a href="#" class="btn btn-primary">Try Free</a>
-            </div>
-            <button class="mobile-menu-toggle" id="menuToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </header>
+    <header class="navbar" id="navbar"></header>
 
     <main>
         <!-- Hero Section -->
@@ -50,8 +32,8 @@
                     <p>Stop juggling tasks and start finishing them. FocusFlow uses neuro-science to
                         help you reach deep work states faster and stay there longer.</p>
                     <div class="hero-actions">
-                        <a href="#" class="btn btn-primary btn-lg">Start Free Trial </a>
-                        <a href="#" class="btn btn-secondary btn-lg">View Demo</a>
+                        <a href="quote.html" class="btn btn-primary btn-lg">Get a Quote</a>
+                        <a href="features.html" class="btn btn-secondary btn-lg">Explore System</a>
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -130,7 +112,7 @@
                                 <li>Daily Analytics</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-outline full-width">Begin Journey</a>
+                        <a href="quote.html" class="btn btn-outline full-width">Learn More</a>
                     </div>
                     <div class="pricing-card featured">
                         <div class="card-badge">Top Tier</div>
@@ -145,7 +127,7 @@
                                 <li>Custom Integrations</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-primary full-width">Unlock Elite</a>
+                        <a href="quote.html" class="btn btn-primary full-width">Get a Quote</a>
                     </div>
                     <div class="pricing-card">
                         <div class="card-payload">
@@ -159,7 +141,7 @@
                                 <li>SSO & Security</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-outline full-width">Go Quantum</a>
+                        <a href="quote.html" class="btn btn-outline full-width">Contact Sales</a>
                     </div>
                 </div>
             </div>
@@ -218,8 +200,8 @@
                         <h2>Ready to ascend?</h2>
                         <p>Join 50,000+ high-performers today.</p>
                         <div class="cta-actions">
-                            <a href="#" class="btn btn-primary btn-lg">Join the Elite</a>
-                            <p class="no-credit-card">Immediate access. No commitment.</p>
+                            <a href="quote.html" class="btn btn-primary btn-lg">Get Started Now</a>
+                            <p class="no-credit-card">Consultation is free. Response within 24h.</p>
                         </div>
                     </div>
                     <div class="cta-visual">
@@ -231,46 +213,7 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-top">
-                <div class="footer-brand">
-                    <div class="logo-text"
-                        style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em; margin-bottom: 1rem; display: block;">
-                        FocusFlow</div>
-                    <p>The operating system for your mind.</p>
-                </div>
-                <div class="footer-links">
-                    <div class="link-group">
-                        <h4>Core</h4>
-                        <a href="#">System</a>
-                        <a href="#">Modules</a>
-                        <a href="#">Network</a>
-                    </div>
-                    <div class="link-group">
-                        <h4>Entity</h4>
-                        <a href="#">Protocol</a>
-                        <a href="#">Status</a>
-                        <a href="#">Intel</a>
-                    </div>
-                    <div class="link-group">
-                        <h4>Support</h4>
-                        <a href="#">Base</a>
-                        <a href="#">Terminal</a>
-                        <a href="#">Encrypted</a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 FocusFlow System. Secure encryption active.</p>
-                <div class="social-links">
-                    <a href="#">X</a>
-                    <a href="#">GitHub</a>
-                    <a href="#">Discord</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 
     <script src="script.js"></script>
 </body>
