--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,10 @@
     <div class="footer-top">
         <div class="footer-brand">
             <div class="logo-text"
-                style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em; margin-bottom: 1rem; display: block; cursor: pointer;"
+                style="font-weight: 400; font-size: 1.6rem; letter-spacing: -0.01em; margin-bottom: 1rem; display: block; cursor: pointer; font-family: 'DM Serif Display', serif;"
                 onclick="window.location.href='index.html'">
-                FocusFlow</div>
+                <span style="color: #06d6a0;">Focus</span>Flow
+            </div>
             <p>The operating system for your mind.</p>
         </div>
         <div class="footer-links">
