--- a/features.html
+++ b/features.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
 
@@ -17,7 +17,8 @@
     <header class="navbar" id="navbar"></header>
 
     <main>
-        <section class="hero secondary-hero">
+        <section class="hero secondary-hero"
+            style="background-image: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&q=80&w=2070');">
             <div class="container">
                 <div class="hero-content">
                     <div class="badge">Advanced Capabilities</div>
@@ -41,15 +42,21 @@
                     </div>
                     <div class="detail-card feature-card visible">
                         <div class="feature-icon">🔇</div>
-                        <h3>Adaptive Distraction Shield</h3>
-                        <p>Dynamic interference patterns that physically block outgoing distraction signals from your
-                            devices. Zero lag, 100% focus.</p>
+                        <div>
+                            <h3>Adaptive Distraction Shield</h3>
+                            <p>Dynamic interference patterns that physically block outgoing distraction signals from
+                                your
+                                devices. Zero lag, 100% focus.</p>
+                        </div>
                     </div>
                     <div class="detail-card feature-card visible">
                         <div class="feature-icon">💼</div>
-                        <h3>Deep Work Hub</h3>
-                        <p>A unified interface for all your professional tools, stripped of decorative distractions and
-                            optimized for keyboard-first navigation.</p>
+                        <div>
+                            <h3>Deep Work Hub</h3>
+                            <p>A unified interface for all your professional tools, stripped of decorative distractions
+                                and
+                                optimized for keyboard-first navigation.</p>
+                        </div>
                     </div>
                 </div>
             </div>
