--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <!-- Background Decoration -->
-    <div class="glow-point" style="top: 0; left: 20%; color: var(--primary);"></div>
-    <div class="glow-point" style="top: 40%; right: 10%; color: var(--secondary);"></div>
-
     <header class="navbar" id="navbar"></header>
 
     <main>
-        <!-- Hero Section -->
+        <!-- Hero Section — Asymmetric split -->
         <section class="hero" id="home">
             <div class="container">
                 <div class="hero-content">
@@ -60,7 +56,7 @@
             </div>
         </section>
 
-        <!-- Features Section -->
+        <!-- Features Section — Bento grid -->
         <section class="features" id="features">
             <div class="container">
                 <div class="section-header">
@@ -70,8 +66,12 @@
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-icon">🧠</div>
-                        <h3>AI Flow State</h3>
-                        <p>Predictive energy analysis that optimizes your schedule for maximum deep work potential.</p>
+                        <div>
+                            <h3>AI Flow State</h3>
+                            <p>Predictive energy analysis that optimizes your schedule for maximum deep work potential.
+                                Our AI learns your patterns and builds the perfect rhythm for peak cognitive
+                                performance.</p>
+                        </div>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">📵</div>
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <!-- Testimonials Section -->
+        <!-- Testimonials Section — Horizontal scroll -->
         <section class="testimonials" id="testimonials">
             <div class="container">
                 <div class="section-header">
@@ -188,26 +188,58 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Duplicated cards for seamless infinite scroll -->
+                    <div class="testimonial-card">
+                        <p class="quote">"FocusFlow isn't just an app; it's a cognitive upgrade. I've doubled my output
+                            while working fewer hours."</p>
+                        <div class="user-info">
+                            <img src="https://i.pravatar.cc/150?u=1" alt="Sarah Chen" class="avatar">
+                            <div>
+                                <h4>Sarah Chen</h4>
+                                <p>Staff Engineer @ Vercel</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="quote">"The distraction shield is surgical. It's the only thing that keeps me in the
+                            zone when I'm shipping."</p>
+                        <div class="user-info">
+                            <img src="https://i.pravatar.cc/150?u=2" alt="Marcus Thompson" class="avatar">
+                            <div>
+                                <h4>Marcus Thompson</h4>
+                                <p>Lead Designer @ Linear</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="quote">"Analytics revealed patterns I never saw. Now I'm working with my brain, not
+                            against it."</p>
+                        <div class="user-info">
+                            <img src="https://i.pravatar.cc/150?u=3" alt="Elena Rodriguez" class="avatar">
+                            <div>
+                                <h4>Elena Rodriguez</h4>
+                                <p>Founding Engineer @ OpenAI</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- Final CTA Section -->
+        <!-- Final CTA Section — Full bleed -->
         <section class="cta-section">
-            <div class="container">
-                <div class="cta-card">
-                    <div class="cta-content">
-                        <h2>Ready to ascend?</h2>
-                        <p>Join 50,000+ high-performers today.</p>
-                        <div class="cta-actions">
-                            <a href="quote.html" class="btn btn-primary btn-lg">Get Started Now</a>
-                            <p class="no-credit-card">Consultation is free. Response within 24h.</p>
-                        </div>
+            <div class="cta-card">
+                <div class="cta-content">
+                    <h2>Ready to ascend?</h2>
+                    <p>Join 50,000+ high-performers today.</p>
+                    <div class="cta-actions">
+                        <a href="quote.html" class="btn btn-primary btn-lg">Get Started Now</a>
+                        <p class="no-credit-card">Consultation is free. Response within 24h.</p>
                     </div>
-                    <div class="cta-visual">
-                        <img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?auto=format&fit=crop&q=80&w=2070"
-                            alt="Productive Workspace">
-                    </div>
+                </div>
+                <div class="cta-visual">
+                    <img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?auto=format&fit=crop&q=80&w=2070"
+                        alt="Productive Workspace">
                 </div>
             </div>
         </section>
