--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,9 @@
 <div class="container">
-    <div class="logo-text" style="font-weight: 800; font-size: 1.4rem; letter-spacing: -0.02em; cursor: pointer;"
-        onclick="window.location.href='index.html'">FocusFlow</div>
+    <div class="logo-text"
+        style="font-weight: 400; font-size: 1.6rem; letter-spacing: -0.01em; cursor: pointer; font-family: 'DM Serif Display', serif;"
+        onclick="window.location.href='index.html'">
+        <span style="color: #06d6a0;">Focus</span>Flow
+    </div>
     <nav class="nav-links">
         <a href="index.html">System</a>
         <a href="features.html">Modules</a>
