--- a/protocol.html
+++ b/protocol.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
 
@@ -17,7 +17,8 @@
     <header class="navbar" id="navbar"></header>
 
     <main>
-        <section class="hero secondary-hero">
+        <section class="hero secondary-hero"
+            style="background-image: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&q=80&w=2070');">
             <div class="container">
                 <div class="hero-content">
                     <div class="badge">Operational Methodology</div>
