--- a/quote.html
+++ b/quote.html
@@ -9,23 +9,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <style>
         .quote-container {
             padding: 160px 0 100px;
-            background: var(--bg-sidebar);
+            background: var(--bg-surface);
             min-height: 100vh;
         }
 
         .quote-card {
-            background: #fff;
+            background: var(--bg-card);
             padding: 4rem;
-            border-radius: var(--radius-lg);
-            border: 2px solid var(--border);
+            border-radius: var(--radius-xl);
+            border: 1px solid var(--border);
             max-width: 700px;
             margin: 0 auto;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            position: relative;
         }
 
         .quote-header {
@@ -36,6 +37,12 @@
         .quote-header h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            font-family: var(--font-heading);
+            color: var(--text-main);
+        }
+
+        .quote-header p {
+            color: var(--text-muted);
         }
 
         .form-grid {
@@ -57,6 +64,7 @@
             margin-bottom: 0.5rem;
             font-weight: 600;
             font-size: 0.9rem;
+            color: var(--text-muted);
         }
 
         .form-group input,
@@ -68,6 +76,14 @@
             border: 1px solid var(--border);
             font-family: inherit;
             transition: var(--transition);
+            background: var(--bg-elevated);
+            color: var(--text-main);
+            font-size: 0.95rem;
+        }
+
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            color: var(--text-dim);
         }
 
         .form-group input:focus,
@@ -75,7 +91,12 @@
         .form-group textarea:focus {
             outline: none;
             border-color: var(--primary);
-            box-shadow: 0 0 0 4px var(--primary-light);
+            box-shadow: 0 0 0 3px var(--primary-glow);
+        }
+
+        .form-group select option {
+            background: var(--bg-elevated);
+            color: var(--text-main);
         }
 
         .form-group textarea {
@@ -96,8 +117,17 @@
 
         .success-icon {
             font-size: 4rem;
-            color: #10B981;
+            color: var(--primary);
             margin-bottom: 1.5rem;
+        }
+
+        #successMessage h2 {
+            color: var(--text-main);
+            font-family: var(--font-heading);
+        }
+
+        #successMessage p {
+            color: var(--text-muted);
         }
 
         @media (max-width: 768px) {
