--- a/terminal.html
+++ b/terminal.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
         rel="stylesheet">
     <style>
         .terminal-window {
@@ -54,7 +54,7 @@
         }
 
         .prompt {
-            color: #facc15;
+            color: #06d6a0;
         }
 
         .type {
@@ -74,7 +74,8 @@
     <header class="navbar" id="navbar"></header>
 
     <main>
-        <section class="hero secondary-hero">
+        <section class="hero secondary-hero"
+            style="background-image: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&q=80&w=2070');">
             <div class="container">
                 <div class="hero-content">
                     <div class="badge">Advanced Command Line</div>
